# ipa-example-hardware-managers

./: README.md  README.rst  requirements.txt  setup.cfg  tox.ini
example_device_hardware_managers/: example_device.py
example_hardware_managers/: example_business_logic.py
