[metadata]
name = ipa-example-hardware-managers
author = Jay Faulkner
author-email = jay@jvf.cc
summary = IPA Example Hardware Managers
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        Operating System :: OS Independent
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python

[files]
packages =
    example_device_hardware_manager

[entry_points]
ironic_python_agent.hardware_managers =
    example_device = example_device_hardware_manager.example_device:ExampleDeviceHardwareManager
